# sift

./: .gitattributes  .gitignore  CLAUDE.md  README.md  argo.config.mjs  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vite.lib.config.ts  vitest.config.ts  wrangler.toml
.github/workflows/: ci.yml  cloudflare.yml  deploy.yml
crates/compute/: Cargo.toml
crates/compute/src/: filter.rs  lib.rs  summary.rs
crates/nteract-predicate/: Cargo.toml
crates/nteract-predicate/pkg/: nteract_predicate.d.ts  nteract_predicate.js  nteract_predicate_bg.wasm  nteract_predicate_bg.wasm.d.ts  package.json
crates/nteract-predicate/src/: filter.rs  lib.rs  store.rs  summary.rs  utils.rs
demos/: sift-showcase.demo.ts  sift-showcase.scenes.json
docs/: embedding-guide.md
e2e/: cast-undo.spec.ts  datasets.spec.ts  filter-labels.spec.ts  header-overlap.spec.ts  huggingface.spec.ts  mobile.spec.ts  notebook.spec.ts  numeric-heavy.spec.ts  odometer.spec.ts  perf.spec.ts  pinning.spec.ts  profiling.spec.ts  table.spec.ts
public/: _headers
scripts/: check-lfs.sh
src/: accumulators.test.ts  accumulators.ts  auto-width.ts  column-menu.ts  datasets.ts  filter-schema.test.ts  filter-schema.ts  generate-data.ts  index.ts  main.ts  parquet-loader.ts  predicate.ts  react.test.tsx  react.tsx  setupTests.ts  sparkline.tsx  style.css  table.test.ts  table.ts  wasm-table-data.ts
src/components/: column-context-menu.tsx
src/components/ui/: context-menu.tsx  popover.tsx
tests/e2e/: cast-during-streaming.spec.ts
