[package]
name = "nteract-predicate"
version = "0.1.0"
edition = "2021"
description = "WASM predicate engine for @nteract/data-explorer: filter, aggregate, string search on Arrow data"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
bytes = "1"

# Arrow with compute kernels — feature-gated to control WASM size
arrow = { version = "54", default-features = false, features = [
  "ipc",
  "ffi",
] }
arrow-array = { version = "54", default-features = false }
arrow-buffer = { version = "54", default-features = false }
arrow-cast = { version = "54", default-features = false }
arrow-ord = { version = "54", default-features = false }
arrow-select = { version = "54", default-features = false }
arrow-string = { version = "54", default-features = false }

# Parquet reader — replaces parquet-wasm as a separate dependency
parquet = { version = "54", default-features = false, features = ["arrow"] }

[profile.release]
opt-level = "s"      # optimize for size
lto = true
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
